--- a/src/styles/CarbonaraDataGrid.css
+++ b/src/styles/CarbonaraDataGrid.css
@@ -15,5 +15,25 @@
 }
 
 .CarbonaraTable-DataGridBodyWrapper {
-	overflow: auto;
+	overflow: auto;	
+}
+
+.CarbonaraTable-DataGridBodyWrapper::-webkit-scrollbar {
+	width: 5px;
+	height: 5px;
+	transform: translate(10px);
+}
+
+.CarbonaraTable-DataGridBodyWrapper::-webkit-scrollbar-track {
+	box-shadow: inset 0 0 5px var(--carbonara-table--color-gray); 
+	border-radius: 20px;
+}
+
+.CarbonaraTable-DataGridBodyWrapper::-webkit-scrollbar-thumb {
+	border-radius: 20px;
+	background: var(--carbonara-table--color-primary); 
+}
+
+.CarbonaraTable-DataGridBodyWrapper::-webkit-scrollbar-thumb:hover {
+	background: var(--carbonara-table--color-secondary); 
 }
