--- a/src/styles/CarbonaraTable.css
+++ b/src/styles/CarbonaraTable.css
@@ -18,6 +18,26 @@
   height: calc(100% - 40px);
 }
 
+.CarbonaraTable-TableContainer table tbody::-webkit-scrollbar {
+	width: 5px;
+	height: 5px;
+	transform: translate(10px);
+}
+
+.CarbonaraTable-TableContainer table tbody::-webkit-scrollbar-track {
+	box-shadow: inset 0 0 5px var(--carbonara-table--color-gray); 
+	border-radius: 20px;
+}
+
+.CarbonaraTable-TableContainer table tbody::-webkit-scrollbar-thumb {
+	border-radius: 20px;
+	background: var(--carbonara-table--color-primary); 
+}
+
+.CarbonaraTable-TableContainer table tbody::-webkit-scrollbar-thumb:hover {
+	background: var(--carbonara-table--color-secondary); 
+}
+
 .CarbonaraTable-TableContainer table {
   max-width: 100%;
   width: -webkit-fit-content;
