--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -9,6 +9,7 @@
   --carbonara-table--color-light-blue-gray: #bfc6d6;
 
   --carbonara-table--color-primary: #525F7F;
+  --carbonara-table--color-secondary: #516DBA;
   
   --carbonara-table--color-text: #444F6A;
   --carbonara-table--color-light-text: #BAC7DC;
